@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,8 +27,8 @@ import jdk.jfr.consumer.RecordingStream;
  * @summary Tests ObjectAllocationSampleEvent
  * @requires vm.hasJFR
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} TestObjectAllocationSampleEvent.java
- * @run main/othervm --enable-preview TestObjectAllocationSampleEvent
+ * @compile TestObjectAllocationSampleEvent.java
+ * @run main/othervm TestObjectAllocationSampleEvent
  */
 public class TestObjectAllocationSampleEvent {
 
