@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,8 +25,8 @@
  * @test
  * @summary Verifies that JVMTI function return correct info in Breakpoint events in Continuation.yield0().
  * @requires vm.continuations
- * @compile --enable-preview -source ${jdk.version} BreakpointInYieldTest.java
- * @run main/othervm/native --enable-preview -agentlib:BreakpointInYieldTest -Djdk.defaultScheduler.parallelism=2 BreakpointInYieldTest
+ * @compile BreakpointInYieldTest.java
+ * @run main/othervm/native -agentlib:BreakpointInYieldTest -Djdk.defaultScheduler.parallelism=2 BreakpointInYieldTest
  */
 
 import java.util.concurrent.*;
