@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,15 +23,10 @@
 
 /*
  * @test
- * @enablePreview
  * @run testng TestSpliterator
  */
 
-import java.lang.foreign.Arena;
-import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.SequenceLayout;
+import java.lang.foreign.*;
 
 import java.lang.invoke.VarHandle;
 import java.util.LinkedList;
@@ -42,15 +37,11 @@ import java.util.concurrent.RecursiveTask;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.LongStream;
 
-import java.lang.foreign.ValueLayout;
-
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
 
 public class TestSpliterator {
-
-    static final VarHandle INT_HANDLE = ValueLayout.JAVA_INT.arrayElementVarHandle();
 
     final static int CARRIER_SIZE = 4;
 
@@ -59,10 +50,10 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(size, ValueLayout.JAVA_INT);
 
         //setup
-        try (Arena arena = Arena.openShared()) {
-            MemorySegment segment = MemorySegment.allocateNative(layout, arena.scope());;
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(layout);;
             for (int i = 0; i < layout.elementCount(); i++) {
-                INT_HANDLE.set(segment, (long) i, i);
+                segment.setAtIndex(ValueLayout.JAVA_INT, i, i);
             }
             long expected = LongStream.range(0, layout.elementCount()).sum();
             //serial
@@ -86,9 +77,10 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
 
         //setup
-        MemorySegment segment = MemorySegment.allocateNative(layout, SegmentScope.auto());
+        Arena scope = Arena.ofAuto();
+        MemorySegment segment = scope.allocate(layout);
         for (int i = 0; i < layout.elementCount(); i++) {
-            INT_HANDLE.set(segment, (long) i, i);
+            segment.setAtIndex(ValueLayout.JAVA_INT, i, i);
         }
         long expected = LongStream.range(0, layout.elementCount()).sum();
 
@@ -101,69 +93,78 @@ public class TestSpliterator {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeTooBig() {
-        MemorySegment.allocateNative(2, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(2, 1)
                 .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeTooBig() {
-        MemorySegment.allocateNative(2, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(2, 1)
                 .elements(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeNotMultiple() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeNotMultiple() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .elements(ValueLayout.JAVA_INT);
     }
 
     @Test
     public void testSpliteratorElementSizeMultipleButNotPowerOfTwo() {
-        MemorySegment.allocateNative(12, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(12, 1)
                 .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test
     public void testStreamElementSizeMultipleButNotPowerOfTwo() {
-        MemorySegment.allocateNative(12, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(12, 1)
                 .elements(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeZero() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .spliterator(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeZero() {
-        MemorySegment.allocateNative(7, SegmentScope.auto())
+        Arena scope = Arena.ofAuto();
+        scope.allocate(7, 1)
                 .elements(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testHyperAligned() {
-        MemorySegment segment = MemorySegment.allocateNative(8, SegmentScope.auto());
+        Arena scope = Arena.ofAuto();
+        MemorySegment segment = scope.allocate(8, 1);
         // compute an alignment constraint (in bytes) which exceed that of the native segment
         long bigByteAlign = Long.lowestOneBit(segment.address()) << 1;
-        segment.elements(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT.withBitAlignment(bigByteAlign * 8)));
+        segment.elements(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT.withByteAlignment(bigByteAlign)));
     }
 
     static long sumSingle(long acc, MemorySegment segment) {
-        return acc + (int)INT_HANDLE.get(segment, 0L);
+        return acc + segment.getAtIndex(ValueLayout.JAVA_INT, 0);
     }
 
     static long sum(long start, MemorySegment segment) {
         long sum = start;
         int length = (int)segment.byteSize();
         for (int i = 0 ; i < length / CARRIER_SIZE ; i++) {
-            sum += (int)INT_HANDLE.get(segment, (long)i);
+            sum += segment.getAtIndex(ValueLayout.JAVA_INT, i);
         }
         return sum;
     }
