@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,8 +23,8 @@
 
 import jdk.test.lib.RandomFactory;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
@@ -37,7 +37,6 @@ import static java.nio.file.StandardOpenOption.*;
 
 /*
  * @test
- * @enablePreview
  * @bug 8286637
  * @summary Ensure that memory mapping beyond 32-bit range does not cause an
  *          EXCEPTION_ACCESS_VIOLATION.
@@ -78,7 +77,7 @@ public class LargeMapTest {
         try (FileChannel fc = FileChannel.open(p, READ, WRITE)) {
             MemorySegment mappedMemorySegment =
                 fc.map(FileChannel.MapMode.READ_WRITE, 0, p.toFile().length(),
-                       SegmentScope.auto());
+                       Arena.ofAuto());
             MemorySegment target = mappedMemorySegment.asSlice(BASE, EXTRA);
             if (!target.asByteBuffer().equals(bb)) {
                 throw new RuntimeException("Expected buffers to be equal");
